@@ -7,7 +7,8 @@ additionaldir  = $(datadir)/gnome-system-log
 
 INCLUDES = -DG_LOG_DOMAIN=\"gnome-system-log\"	$(GNOME_UTILS_CFLAGS) 		\
 	-DGNOMELOCALEDIR=\""$(datadir)/locale"\"			\
-	-I$(includedir) -I$(top_srcdir)/logview/pixmaps\
+	-I$(top_srcdir)/logview/pixmaps\
+	-DDATADIR=\""$(datadir)"\" \
 	-DLOGVIEWINSTALLPREFIX=\""$(prefix)/\""
 
 bin_PROGRAMS = gnome-system-log
