@@ -1,3 +1,7 @@
+2002-04-16  Kevin Vandersloot <kfv101@psu.edu>
+
+        * Makefile.am, logview.c : get help working - almost
+
 2002-03-21 Aruna P R <aruna.pou@wipro.com>
 
 	* logview.c: add session managment to systemlogmoitor
